[gd_scene load_steps=14 format=3 uid="uid://673smdjoegvd"]

[ext_resource type="PackedScene" uid="uid://bd7y8koo1w71" path="res://scenes/interfaces/interface_base.tscn" id="1_qir55"]
[ext_resource type="Script" path="res://scenes/interfaces/heroes/heroes.gd" id="2_aktco"]
[ext_resource type="PackedScene" uid="uid://ckooocc8ghpgl" path="res://scenes/slots/hero_slot/hero_slot.tscn" id="3_md810"]
[ext_resource type="Script" path="res://scenes/interfaces/heroes/hero_page.gd" id="4_iqvvf"]
[ext_resource type="Texture2D" uid="uid://dov0tkj3njqct" path="res://assets/art/characters/Eddy the Jungler.png" id="5_omhe7"]
[ext_resource type="Texture2D" uid="uid://bv2cxijy21p7h" path="res://assets/art/stats/health.png" id="5_wiflx"]
[ext_resource type="Texture2D" uid="uid://d0gsjwva5fjcf" path="res://assets/art/stats/damage.png" id="6_tmxtq"]
[ext_resource type="Texture2D" uid="uid://b5oq78l2e2x6t" path="res://assets/art/stats/mana.png" id="7_4mw7m"]
[ext_resource type="PackedScene" uid="uid://bh6i5ssmhkhq" path="res://scenes/slots/skill_slot/skill_slot.tscn" id="8_d3csg"]
[ext_resource type="Texture2D" uid="uid://ug5hh7ljyn0v" path="res://assets/art/ui/add_equipment.png" id="9_w1wtq"]
[ext_resource type="Texture2D" uid="uid://s5uk58wlq8km" path="res://assets/art/ui/quit_button_normal.png" id="11_geosi"]
[ext_resource type="Script" path="res://scenes/interfaces/heroes/equipment_container.gd" id="11_o3qgp"]
[ext_resource type="Texture2D" uid="uid://etsoohdkrjyy" path="res://assets/art/ui/quit_button_hover.png" id="12_ygxs3"]

[node name="Heroes" instance=ExtResource("1_qir55")]
script = ExtResource("2_aktco")
slot_scene = ExtResource("3_md810")

[node name="Label" parent="PC/MC/VB" index="0"]
text = "Heroes"

[node name="GridContainer" type="GridContainer" parent="PC/MC/VB" index="1"]
unique_name_in_owner = true
layout_mode = 2
columns = 4

[node name="MarginContainer" type="MarginContainer" parent="." index="1"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/margin_top = 50
theme_override_constants/margin_bottom = 50

[node name="HeroPage" type="PanelContainer" parent="MarginContainer" index="0" groups=["update_post_match"]]
unique_name_in_owner = true
layout_mode = 2
theme_type_variation = &"PanelWithBorder"
script = ExtResource("4_iqvvf")

[node name="MC" type="MarginContainer" parent="MarginContainer/HeroPage" index="0"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/HeroPage/MC" index="0"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HeroPage/MC/HBoxContainer" index="0"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/HeroPage/MC/HBoxContainer/VBoxContainer" index="0"]
layout_mode = 2

[node name="VB" type="VBoxContainer" parent="MarginContainer/HeroPage/MC/HBoxContainer/VBoxContainer/HBoxContainer" index="0"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 1.5
theme_override_constants/separation = 10

[node name="NameLabel" type="Label" parent="MarginContainer/HeroPage/MC/HBoxContainer/VBoxContainer/HBoxContainer/VB" index="0"]
unique_name_in_owner = true
layout_mode = 2
theme_type_variation = &"HeaderLarge"
text = "Hej"

[node name="LvlLabel" type="Label" parent="MarginContainer/HeroPage/MC/HBoxContainer/VBoxContainer/HBoxContainer/VB" index="1"]
unique_name_in_owner = true
layout_mode = 2
theme_type_variation = &"HeaderSmall"
text = "lvl"

[node name="HB6" type="HBoxContainer" parent="MarginContainer/HeroPage/MC/HBoxContainer/VBoxContainer/HBoxContainer/VB" index="2"]
layout_mode = 2

[node name="XPLabel" type="Label" parent="MarginContainer/HeroPage/MC/HBoxContainer/VBoxContainer/HBoxContainer/VB/HB6" index="0"]
unique_name_in_owner = true
visible = false
layout_mode = 2
theme_type_variation = &"HeaderSmall"
text = "XP"

[node name="XpProgressBar" type="ProgressBar" parent="MarginContainer/HeroPage/MC/HBoxContainer/VBoxContainer/HBoxContainer/VB/HB6" index="1"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4

[node name="Control" type="Control" parent="MarginContainer/HeroPage/MC/HBoxContainer/VBoxContainer/HBoxContainer/VB/HB6" index="2"]
layout_mode = 2
size_flags_horizontal = 3

[node name="StatsPointsLabel" type="Label" parent="MarginContainer/HeroPage/MC/HBoxContainer/VBoxContainer/HBoxContainer/VB" index="3"]
unique_name_in_owner = true
layout_mode = 2
theme_type_variation = &"HeaderMedium"
text = "Stats"

[node name="HB" type="HBoxContainer" parent="MarginContainer/HeroPage/MC/HBoxContainer/VBoxContainer/HBoxContainer/VB" index="4"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="MarginContainer/HeroPage/MC/HBoxContainer/VBoxContainer/HBoxContainer/VB/HB" index="0"]
layout_mode = 2
texture = ExtResource("5_wiflx")
expand_mode = 2

[node name="HealthLabel" type="Label" parent="MarginContainer/HeroPage/MC/HBoxContainer/VBoxContainer/HBoxContainer/VB/HB" index="1"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_type_variation = &"HeaderSmall"
text = "Health: "

[node name="DodgeLabel" type="Label" parent="MarginContainer/HeroPage/MC/HBoxContainer/VBoxContainer/HBoxContainer/VB/HB" index="2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_type_variation = &"HeaderSmall"
text = "Dodge chance:"

[node name="HB2" type="HBoxContainer" parent="MarginContainer/HeroPage/MC/HBoxContainer/VBoxContainer/HBoxContainer/VB" index="5"]
layout_mode = 2

[node name="TextureRect2" type="TextureRect" parent="MarginContainer/HeroPage/MC/HBoxContainer/VBoxContainer/HBoxContainer/VB/HB2" index="0"]
layout_mode = 2
texture = ExtResource("6_tmxtq")
expand_mode = 2

[node name="DamageLabel" type="Label" parent="MarginContainer/HeroPage/MC/HBoxContainer/VBoxContainer/HBoxContainer/VB/HB2" index="1"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_type_variation = &"HeaderSmall"
text = "Attack Damage: "

[node name="blockLabel" type="Label" parent="MarginContainer/HeroPage/MC/HBoxContainer/VBoxContainer/HBoxContainer/VB/HB2" index="2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_type_variation = &"HeaderSmall"
text = "Block chance:"

[node name="HB5" type="HBoxContainer" parent="MarginContainer/HeroPage/MC/HBoxContainer/VBoxContainer/HBoxContainer/VB" index="6"]
layout_mode = 2

[node name="TextureRect3" type="TextureRect" parent="MarginContainer/HeroPage/MC/HBoxContainer/VBoxContainer/HBoxContainer/VB/HB5" index="0"]
layout_mode = 2
texture = ExtResource("7_4mw7m")
expand_mode = 2

[node name="AbilityPowerLabel" type="Label" parent="MarginContainer/HeroPage/MC/HBoxContainer/VBoxContainer/HBoxContainer/VB/HB5" index="1"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_type_variation = &"HeaderSmall"
text = "Ability Power: "

[node name="CritLabel" type="Label" parent="MarginContainer/HeroPage/MC/HBoxContainer/VBoxContainer/HBoxContainer/VB/HB5" index="2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_type_variation = &"HeaderSmall"
text = "Crit chance:"

[node name="VB2" type="VBoxContainer" parent="MarginContainer/HeroPage/MC/HBoxContainer/VBoxContainer/HBoxContainer" index="1"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Spacer2" type="Control" parent="MarginContainer/HeroPage/MC/HBoxContainer/VBoxContainer/HBoxContainer/VB2" index="0"]
visible = false
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.5

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/HeroPage/MC/HBoxContainer/VBoxContainer/HBoxContainer/VB2" index="1"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="MarginContainer/HeroPage/MC/HBoxContainer/VBoxContainer/HBoxContainer/VB2/MarginContainer" index="0"]
unique_name_in_owner = true
layout_mode = 2
texture = ExtResource("5_omhe7")
expand_mode = 5
stretch_mode = 4

[node name="Name2Label" type="Label" parent="MarginContainer/HeroPage/MC/HBoxContainer/VBoxContainer/HBoxContainer/VB2" index="2"]
unique_name_in_owner = true
visible = false
layout_mode = 2
theme_type_variation = &"HeaderMedium"
text = "Name"

[node name="TypeLabel" type="Label" parent="MarginContainer/HeroPage/MC/HBoxContainer/VBoxContainer/HBoxContainer/VB2" index="3"]
unique_name_in_owner = true
visible = false
layout_mode = 2
theme_type_variation = &"HeaderSmall"
text = "Type"

[node name="Spacer" type="Control" parent="MarginContainer/HeroPage/MC/HBoxContainer/VBoxContainer/HBoxContainer/VB2" index="4"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.5

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HeroPage/MC/HBoxContainer/VBoxContainer" index="1"]
layout_mode = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/HeroPage/MC/HBoxContainer/VBoxContainer/VBoxContainer" index="0"]
layout_mode = 2

[node name="SkillsLabel" type="Label" parent="MarginContainer/HeroPage/MC/HBoxContainer/VBoxContainer/VBoxContainer/HBoxContainer2" index="0"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_type_variation = &"HeaderMedium"
text = "Skill:"

[node name="ItemsLabel" type="Label" parent="MarginContainer/HeroPage/MC/HBoxContainer/VBoxContainer/VBoxContainer/HBoxContainer2" index="1"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_type_variation = &"HeaderMedium"
text = "Equipped Items"

[node name="HBoxContainer3" type="HBoxContainer" parent="MarginContainer/HeroPage/MC/HBoxContainer/VBoxContainer/VBoxContainer" index="1"]
layout_mode = 2

[node name="SkillSlot" parent="MarginContainer/HeroPage/MC/HBoxContainer/VBoxContainer/VBoxContainer/HBoxContainer3" index="0" instance=ExtResource("8_d3csg")]
unique_name_in_owner = true
layout_mode = 2

[node name="Spacer" type="Control" parent="MarginContainer/HeroPage/MC/HBoxContainer/VBoxContainer/VBoxContainer/HBoxContainer3" index="1"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Equipment1Button" type="Button" parent="MarginContainer/HeroPage/MC/HBoxContainer/VBoxContainer/VBoxContainer/HBoxContainer3" index="2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(150, 150)
layout_mode = 2
icon = ExtResource("9_w1wtq")
expand_icon = true

[node name="Spacer2" type="Control" parent="MarginContainer/HeroPage/MC/HBoxContainer/VBoxContainer/VBoxContainer/HBoxContainer3" index="3"]
layout_mode = 2
size_flags_horizontal = 3

[node name="LoreLabel" type="Label" parent="MarginContainer/HeroPage/MC/HBoxContainer/VBoxContainer" index="2"]
unique_name_in_owner = true
layout_mode = 2
text = "Eddy was once just an ordinary kid with a love for exploring the wildest parts of the neighborhood. But one day, he stumbled upon a mysterious, enchanted scythe deep within a forgotten forest. The moment he touched it, Eddy was transformed into something... well, a bit crazier. Now, with a wicked grin permanently plastered on his face and a scythe that seems to have a mind of its own, Eddy roams the jungle like it’s his playground. He delights in ambushing unsuspecting foes, darting in and out of the shadows with wild laughter echoing behind him. Though his sanity might be questionable, his skills in the jungle are unmatched, and he’s always ready to leap into the fray when his team needs him most."
autowrap_mode = 3

[node name="ExitButton" type="TextureButton" parent="MarginContainer/HeroPage" index="1" groups=["sound_button"]]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
texture_normal = ExtResource("11_geosi")
texture_hover = ExtResource("12_ygxs3")
stretch_mode = 0

[node name="EquipmentContainer" type="PanelContainer" parent="." index="2"]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("11_o3qgp")

[node name="VB" type="VBoxContainer" parent="EquipmentContainer" index="0"]
unique_name_in_owner = true
layout_mode = 2

[node name="CloseItemsButton" type="Button" parent="EquipmentContainer/VB" index="0"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
text = "X"

[node name="Control" type="PanelContainer" parent="EquipmentContainer/VB" index="1"]
unique_name_in_owner = true
layout_mode = 2

[node name="UnequipButton" type="Button" parent="EquipmentContainer/VB" index="2"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(150, 150)
layout_mode = 2
text = "UN-EQUIP"
expand_icon = true

[connection signal="pressed" from="PC/MC/QuitButton" to="." method="_on_quit_button_pressed"]
[connection signal="pressed" from="MarginContainer/HeroPage/MC/HBoxContainer/VBoxContainer/VBoxContainer/HBoxContainer3/Equipment1Button" to="." method="_on_equipment_1_button_pressed"]
[connection signal="pressed" from="MarginContainer/HeroPage/ExitButton" to="." method="_on_exit_button_pressed"]
[connection signal="pressed" from="EquipmentContainer/VB/CloseItemsButton" to="." method="_on_close_items_button_pressed"]
[connection signal="pressed" from="EquipmentContainer/VB/UnequipButton" to="." method="_on_unequip_button_pressed"]
